# msdf-rs

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md
msdf/: Cargo.toml  README.md
msdf-sys/: Cargo.toml  README.md  build.rs  wrapper.h
msdf-sys/src/: lib.rs
msdf-sys/src/bindings/: x86_64-linux-gnu.rs
msdf/src/: bitmap.rs  config.rs  lib.rs  loader.rs  test_helpers.rs  tests.rs
